Attributes/attribute options

--- a/resourceBundles/en.properties
+++ b/resourceBundles/en.properties
@@ -1,5 +1,5 @@
 #Created by JInto - www.guh-software.de
-#Mon Mar 26 10:21:59 EDT 2012
+#Mon Mar 26 15:06:16 EDT 2012
 admin.account=Account Manager
 admin.account.accounttabs.addresses=Addresses
 admin.account.accounttabs.carts=Carts
@@ -83,6 +83,8 @@ admin.report_nav=Reporting
 admin.setting=Settings Manager
 admin.setting.addresszonetabs.locations=Locations
 admin.setting.attributesettabs.attributes=Attributes
+admin.setting.attributetabs.attributeoptions=Attribute Options
+admin.setting.attributetabs.description=Description
 admin.setting.createaddresszone=Create New Address Zone
 admin.setting.createaddresszonelocation=Add Location to Zone
 admin.setting.createaddresszonelocation_nav=Add Location to Zone
@@ -370,11 +372,13 @@ entity.attributeSet.attributes=Attributes
 entity.attributeSet.globalFlag=Global Attribute Set
 entity.attributeSet.globalFlag_hint=Setting this to yes will make this attribute set automatically available based on the attribute set type selected. Otherwise you will need to explicitly assign the attribute set to where you want to use it.
 entity.attribute_plural=Attributes
+entity.attributeoption=Attribute Option
 entity.attributeoption.attribute=Attribute
 entity.attributeoption.attributeOptionID=attributeOptionID
 entity.attributeoption.attributeOptionLabel=Label
 entity.attributeoption.attributeOptionValue=Value
 entity.attributeoption.sortOrder=Sort Order
+entity.attributeoption_plural=Attribute Options
 entity.attributeset=Attribute Set
 entity.attributeset_plural=Attribute Sets
 entity.attributevalue.account=account
@@ -764,6 +768,7 @@ entity.shippingrate.shippingMethod=Shipping Method
 entity.shippingrate.shippingRate=Shipping Charge
 entity.shippingrate.shippingRateID=Shipping Rate ID
 entity.sku=SKU
+entity.sku.defaultFlag=Is Default
 entity.sku.delete_success=The SKU was deleted successfully.
 entity.sku.delete_validateIsDefault=The SKU cannot be deleted because it is the default SKU for this product.
 entity.sku.delete_validateOrdered=This SKU cannot be deleted because it has been ordered.
@@ -771,7 +776,6 @@ entity.sku.delete_validateonesku=The SKU cannot be deleted because each product 
 entity.sku.image.exists=Image Exists
 entity.sku.imageFile=Image File Name
 entity.sku.imagePath=Image Path
-entity.sku.isDefault=Default
 entity.sku.listPrice=List Price
 entity.sku.livePrice=Live Price
 entity.sku.options_validateUnique=This option combination already exists.
