some product type UI updates

--- a/resourceBundles/en.properties
+++ b/resourceBundles/en.properties
@@ -1,5 +1,5 @@
 #Created by JInto - www.guh-software.de
-#Mon Mar 26 15:06:16 EDT 2012
+#Tue Mar 27 11:15:33 EDT 2012
 admin.account=Account Manager
 admin.account.accounttabs.addresses=Addresses
 admin.account.accounttabs.carts=Carts
@@ -679,6 +679,7 @@ entity.productType_plural=Product Types
 entity.product_plural=Products
 entity.productattributeset=Product Attribute Set
 entity.productcustomizationattributeset=Product Customization Attribute Set
+entity.productreview=Product Review
 entity.productreview_plural=Product Reviews
 entity.profile.account=account
 entity.profile.profileID=profileID
