--- a/resourceBundles/en.properties
+++ b/resourceBundles/en.properties
@@ -1,5 +1,4 @@
-#Created by JInto - www.guh-software.de
-#Tue Mar 27 11:15:33 EDT 2012
+
 admin.account=Account Manager
 admin.account.accounttabs.addresses=Addresses
 admin.account.accounttabs.carts=Carts
@@ -61,8 +60,11 @@ admin.product.createcontentaccessproduct_nav=New Content Access Product
 admin.product.createcontentaccessproducttype_nav=New Content Access Product Type
 admin.product.createmerchandiseproduct_nav=New Merchandise Product
 admin.product.createmerchandiseproducttype_nav=New Merchandise Product Type
+admin.product.createproduct.selectsubscriptionbenifits=Select the Subscription Benefit(s) that you would like to sell as this product.
+admin.product.createproduct.selectsubscriptionterms=Select the different Subscription Term(s) that you would like to offer for this product.
 admin.product.createsubscriptionproduct_nav=New Subscription Product
 admin.product.createsubscriptionproducttype_nav=New Subscription Product Type
+admin.product.optiongrouptabs.options=Options
 admin.product.producttabs.alternateimages=Alternate Images
 admin.product.producttabs.customattributes=Custom Attributes
 admin.product.producttabs.productcategories=Product Categories
@@ -229,10 +231,12 @@ define.local=Local
 define.modifiedByAccount=Modified By
 define.modifiedDateTime=Modified on
 define.na=N/A
+define.name=Name
 define.no=No
 define.none=None
 define.notapplicable=N/A
 define.ok=Ok
+define.option=Option
 define.quantityshipped=Quantity Shipped
 define.save=Save
 define.select=Select
@@ -452,7 +456,7 @@ entity.location.locationName=Location Name
 entity.location.sellStockOnWeb=Sell Stock On Web
 entity.location.sellStockOnWebWholesale=Sell Stock On Web Wholesale
 entity.location_plural=Locations
-entity.option=Product Option
+entity.option=Option
 entity.option.optionCode=Option Code
 entity.option.optionDescription=Option Description
 entity.option.optionGroup=Option Group
