Wrapped up Content Access as the final thing needed for "product create"

--- a/resourceBundles/en.properties
+++ b/resourceBundles/en.properties
@@ -426,6 +426,7 @@ entity.content.requireSubscriptionFlag=Restrict access through subscription
 entity.content.restrictAccessFlag=Restrict access through subscription and/or purchase
 entity.content.showProductInSubPagesFlag=Show product in sub pages
 entity.content.templateFlag=Use this as a template for Product/Brand/Product Type
+entity.content.title=Content Title
 entity.country.countryCode=Country Code
 entity.country.countryName=Country Name
 entity.creditcardtransaction.authorizationcode=Auth. Code
