few changes to display template code

--- a/resourceBundles/en.properties
+++ b/resourceBundles/en.properties
@@ -401,6 +401,7 @@ entity.brand.brandVendors=brandVendors
 entity.brand.brandWebsite=Brand Website
 entity.brand.delete_Validateisassigned=Brand cannot be deleted because it has been assigned to products
 entity.brand.delete_success=Brand deleted
+entity.brand.brandDisplayTemplate=Display Template
 entity.brand_plural=Brands
 entity.cart.account=account
 entity.cart.cartID=cartID
