Updates to promotions admin

--- a/resourceBundles/en.properties
+++ b/resourceBundles/en.properties
@@ -1,5 +1,5 @@
 #Created by JInto - www.guh-software.de
-#Wed Mar 28 17:37:51 EDT 2012
+#Thu Mar 29 13:07:09 EDT 2012
 admin.account=Account Manager
 admin.account.accounttabs.addresses=Addresses
 admin.account.accounttabs.carts=Carts
@@ -53,6 +53,12 @@ admin.order=Order Manager
 admin.order_nav=Orders
 admin.pricing=Pricing Manager
 admin.pricing.detailpromotion=Promotion Detail
+admin.pricing.promotionperiodtabs.promotionperiodcodes=Promotion Codes
+admin.pricing.promotionperiodtabs.promotionqualifiers=Promotion Qualifiers
+admin.pricing.promotionperiodtabs.promotionrewards=Promotion Rewards
+admin.pricing.promotionreward.discounttype.amount=Fixed Amount
+admin.pricing.promotionreward.discounttype.amountOff=Amount Off
+admin.pricing.promotionreward.discounttype.percentageOff=Percentage Off
 admin.pricing.promotiontabs.promotioncodes=Promotion Codes
 admin.pricing.promotiontabs.promotiondescription=Description
 admin.pricing.promotiontabs.promotionperiods=Promotion Periods
@@ -721,23 +727,47 @@ entity.promotionCode_plural=Promotion Codes
 entity.promotionReward=Promotion Reward
 entity.promotionReward.delete_success=Promotion Reward Deleted
 entity.promotionReward.delete_validateisassigned=This promotion code cannot be deleted because it is in use.
-entity.promotionReward.promotionRewardType.product=Product
-entity.promotionReward.promotionRewardType.shipping=Shipping
+entity.promotionReward.discountType=Discount Type
+entity.promotionReward.discountType.amount=Fixed Price
+entity.promotionReward.discountType.amountOff=Amount Off
+entity.promotionReward.discountType.percentageOff=Percentage Off
 entity.promotionReward.rewardType=Reward Type
+entity.promotionReward.rewardType.order=Order
+entity.promotionReward.rewardType.product=Product
+entity.promotionReward.rewardType.shipping=Shipping
+entity.promotionRewardOrder=Order Promotion Reward
+entity.promotionRewardOrder.amountOff=Order Amount Off
+entity.promotionRewardOrder.discounttype=Discount Type
+entity.promotionRewardOrder.percentageOff=Order % Off
+entity.promotionRewardOrder.rewardType=Reward Type
+entity.promotionRewardProduct=Product Promotion Reward
+entity.promotionRewardProduct.amount=Item Fixed Price
+entity.promotionRewardProduct.amountOff=Item Amount Off
+entity.promotionRewardProduct.discounttype=Discount Type
 entity.promotionRewardProduct.itemAmount=Item Fixed Amount
 entity.promotionRewardProduct.itemAmountOff=Item Amount Off
 entity.promotionRewardProduct.itemPercentageOff=Item % Off
 entity.promotionRewardProduct.itemRewardQuantity=Quantity
+entity.promotionRewardProduct.percentageOff=Item Percentage Off
 entity.promotionRewardProduct.productTypes=Product Types
 entity.promotionRewardProduct.products=Products
 entity.promotionRewardProduct.promotionRewards=Promotion Reward
+entity.promotionRewardProduct.rewardType=Reward Type
 entity.promotionRewardProduct.skus=Sku
+entity.promotionRewardShipping=Shipping Promotion Reward
+entity.promotionRewardShipping.amount=Shipping Fixed Price
+entity.promotionRewardShipping.amountOff=Shipping Amount Off
+entity.promotionRewardShipping.discounttype=Discount Type
+entity.promotionRewardShipping.percentageOff=Shipping % Off
+entity.promotionRewardShipping.rewardType=Reward Type
 entity.promotionRewardShipping.shippingMethod=Shipping Method
+entity.promotionReward_plural=Promotion Rewards
 entity.promotion_plural=Promotions
 entity.promotionperiod=Promotion Period
 entity.promotionperiod.endDateTime=End Date
 entity.promotionperiod.maximumAccountUseCount=Max. Account Use Count
 entity.promotionperiod.maximumUseCount=Max. Use Count
+entity.promotionperiod.promotionperiodID=Promotion Period ID
 entity.promotionperiod.startDateTime=Start Date
 entity.promotionperiod_plural=Promotion Periods
 entity.purchaseorder.estimatedArrivalDateTime=estimatedArrivalDateTime
