working on promotions

--- a/resourceBundles/en.properties
+++ b/resourceBundles/en.properties
@@ -1,5 +1,5 @@
 #Created by JInto - www.guh-software.de
-#Thu Mar 29 13:07:09 EDT 2012
+#Thu Mar 29 18:42:42 EDT 2012
 admin.account=Account Manager
 admin.account.accounttabs.addresses=Addresses
 admin.account.accounttabs.carts=Carts
@@ -744,14 +744,19 @@ entity.promotionRewardProduct=Product Promotion Reward
 entity.promotionRewardProduct.amount=Item Fixed Price
 entity.promotionRewardProduct.amountOff=Item Amount Off
 entity.promotionRewardProduct.discounttype=Discount Type
+entity.promotionRewardProduct.excludedProductTypes=Product Type Exclusions
+entity.promotionRewardProduct.excludedProducts=Product Exclusions
+entity.promotionRewardProduct.excludedSkus=SKU Exclusions
 entity.promotionRewardProduct.itemAmount=Item Fixed Amount
 entity.promotionRewardProduct.itemAmountOff=Item Amount Off
 entity.promotionRewardProduct.itemPercentageOff=Item % Off
-entity.promotionRewardProduct.itemRewardQuantity=Quantity
+entity.promotionRewardProduct.itemRewardQuantity=Quantity per Qualification
+entity.promotionRewardProduct.maximumOrderRewardQuantity=Max. Quantity per Order
 entity.promotionRewardProduct.percentageOff=Item Percentage Off
 entity.promotionRewardProduct.productTypes=Product Types
 entity.promotionRewardProduct.products=Products
 entity.promotionRewardProduct.promotionRewards=Promotion Reward
+entity.promotionRewardProduct.rewardCanApplyToQualifierFlag=Include Qualifier in Reward
 entity.promotionRewardProduct.rewardType=Reward Type
 entity.promotionRewardProduct.skus=Sku
 entity.promotionRewardShipping=Shipping Promotion Reward
