price group work

--- a/resourceBundles/en.properties
+++ b/resourceBundles/en.properties
@@ -1,5 +1,5 @@
 #Created by JInto - www.guh-software.de
-#Fri Mar 30 14:35:14 EDT 2012
+#Fri Mar 30 18:20:30 EDT 2012
 admin.account=Account Manager
 admin.account.accounttabs.addresses=Addresses
 admin.account.accounttabs.carts=Carts
@@ -53,6 +53,7 @@ admin.order=Order Manager
 admin.order_nav=Orders
 admin.pricing=Pricing Manager
 admin.pricing.detailpromotion=Promotion Detail
+admin.pricing.pricegrouptabs.rates=Price Group Rates
 admin.pricing.promotionperiodtabs.promotionperiodcodes=Promotion Codes
 admin.pricing.promotionperiodtabs.promotionqualifiers=Promotion Qualifiers
 admin.pricing.promotionperiodtabs.promotionrewards=Promotion Rewards
@@ -584,14 +585,18 @@ entity.priceGroup.code=Code
 entity.priceGroup.delete_success=PriceGroup Deleted
 entity.priceGroup.parentPriceGroup=Inherit Rates From Price Group
 entity.priceGroup.priceGroupCode=Price Group Code
+entity.priceGroup.priceGroupID=Price Group ID
 entity.priceGroup.priceGroupName=Price Group Name
 entity.priceGroupRate=Price Group Rate
 entity.priceGroupRate.SKUs=Include SKUs
+entity.priceGroupRate.amount=Fixed Price
+entity.priceGroupRate.amountOff=Amount Off
 entity.priceGroupRate.delete_success=Price Group Rate Deleted
 entity.priceGroupRate.excludedProductTypes=Exclude Product Types
 entity.priceGroupRate.excludedProducts=Exclude Products
 entity.priceGroupRate.excludedSKUs=Exclude SKUs
 entity.priceGroupRate.globalFlag=Global Rate
+entity.priceGroupRate.percentageOff=Percentage Off
 entity.priceGroupRate.priceGroupRate=Price Group Rate
 entity.priceGroupRate.priceGroupRateAmount=Amount
 entity.priceGroupRate.priceGroupRateAppliesTo=Applies To
@@ -603,6 +608,8 @@ entity.priceGroupRate.priceGroupRateType.percentageOff=Percentage Off
 entity.priceGroupRate.priceGroupRateType.percentageOffShort=Off
 entity.priceGroupRate.productTypes=Include Product Types
 entity.priceGroupRate.products=Include Products
+entity.priceGroupRate.type=Rate Type
+entity.priceGroupRate_plural=Price Group Rates
 entity.pricegroup.enabledOnAccount=Enabled
 entity.pricegroup.inheritsFrom=Inherits From
 entity.pricegroup.inheritsFromNothing=No (Do not inherit)
