Integration UI cleanup

--- a/resourceBundles/en.properties
+++ b/resourceBundles/en.properties
@@ -41,6 +41,10 @@ admin.help.default=Help Dashboard
 admin.help_nav=Help
 admin.integration=Integration Management
 admin.integration.default=Integration Dashboard
+admin.integration.integrationtabs.payment=Payment
+admin.integration.integrationtabs.data=Data
+admin.integration.integrationtabs.custom=Custom
+admin.integration.integrationtabs.shipping=Shipping
 admin.integration_nav=Integrations
 admin.main=Dashboard
 admin.main.dashboard.neworders=New Orders
@@ -459,9 +463,13 @@ entity.fulfillmentmethod_plural=Fulfillment Methods
 entity.image.imageDescription=Image Description
 entity.image.imageName=Image Name
 entity.image.imageType=Image Type
+entity.integration=Integration
+entity.integration_plural=Integrations
 entity.integration.customActiveFlag=Custom Integration Active
 entity.integration.dataActiveFlag=Data Integration Active
+entity.integration.integrationID=Integration ID
 entity.integration.integrationName=Integration Name
+entity.integration.integrationPackage=Integration Package
 entity.integration.paymentActiveFlag=Payment Integration Active
 entity.integration.shippingActiveFlag=Shipping Integration Active
 entity.location=Location
