changes for account creation

--- a/resourceBundles/en.properties
+++ b/resourceBundles/en.properties
@@ -14,7 +14,7 @@ admin.define.create_nav=Create New ${itemEntityName}
 admin.define.create_title=Create New ${itemEntityName}
 admin.define.delete=Delete ${itemEntityName}
 admin.define.delete_confirm=Are you sure you would like to delete this ${itemEntityName}?
-admin.define.delete_disabled=The ${itemEntityName} can not be deleted becuase it is in use, or has been involved in a previous transaction.  You can however make the product inactive so that it doesn't show up in default listings.
+admin.define.delete_disabled=The ${itemEntityName} can not be deleted becuase it is in use, or has been involved in a previous transaction.  You can however make the ${itemEntityName} inactive.
 admin.define.delete_error=There was an error when trying to delete the ${itemEntityName}
 admin.define.delete_nav=Delete ${itemEntityName}
 admin.define.delete_success=The ${itemEntityName} was deleted sucessfully.
