More work on new setting model.

--- a/resourceBundles/en.properties
+++ b/resourceBundles/en.properties
@@ -1,5 +1,4 @@
-#Created by JInto - www.guh-software.de
-#Fri Mar 30 18:20:30 EDT 2012
+
 admin.account=Account Manager
 admin.account.accounttabs.addresses=Addresses
 admin.account.accounttabs.carts=Carts
@@ -41,9 +40,9 @@ admin.help.default=Help Dashboard
 admin.help_nav=Help
 admin.integration=Integration Management
 admin.integration.default=Integration Dashboard
-admin.integration.integrationtabs.payment=Payment
-admin.integration.integrationtabs.data=Data
 admin.integration.integrationtabs.custom=Custom
+admin.integration.integrationtabs.data=Data
+admin.integration.integrationtabs.payment=Payment
 admin.integration.integrationtabs.shipping=Shipping
 admin.integration_nav=Integrations
 admin.main=Dashboard
@@ -113,10 +112,6 @@ admin.setting.fulfillmentmethodtypes.shippingtabs.shippingmethods=Shipping Metho
 admin.setting.paymentmethodtypes.cashtabs.settings=Cash Settings
 admin.setting.paymentmethodtypes.creditcardtabs.settings=Credit Card Settings
 admin.setting.paymentmethodtypes.giftcardtabs.settings=Gift Card Settings
-admin.setting.settingtabs.advanced=Advanced Settings
-admin.setting.settingtabs.general=General Settings
-admin.setting.settingtabs.order=Order Settings
-admin.setting.settingtabs.product=Product Settings
 admin.setting.taxcategorytabs.rates=Tax Rates
 admin.setting.updateProductCache_success=Product Cache Update Started
 admin.setting.updateSkuCache=Update Sku Cache
@@ -464,7 +459,6 @@ entity.image.imageDescription=Image Description
 entity.image.imageName=Image Name
 entity.image.imageType=Image Type
 entity.integration=Integration
-entity.integration_plural=Integrations
 entity.integration.customActiveFlag=Custom Integration Active
 entity.integration.dataActiveFlag=Data Integration Active
 entity.integration.integrationID=Integration ID
@@ -472,6 +466,7 @@ entity.integration.integrationName=Integration Name
 entity.integration.integrationPackage=Integration Package
 entity.integration.paymentActiveFlag=Payment Integration Active
 entity.integration.shippingActiveFlag=Shipping Integration Active
+entity.integration_plural=Integrations
 entity.location=Location
 entity.location.locationID=Location ID
 entity.location.locationName=Location Name
@@ -1062,73 +1057,48 @@ frontend.checkout.saveaccount=Save & Continue
 frontend.checkout.saveshippingaddress=Save & Continue
 frontend.checkout.saveshippingmethod=Save & Continue
 setting=Setting
-setting.account=Account
-setting.advanced=Advanced Settings
-setting.advanced.currencyLocale=Currency Locale
-setting.advanced.currencyType=Currency Type
-setting.advanced.dateFormat=Date Format
-setting.advanced.editRemoteIDFields=Edit RemoteID Fields in Administration
-setting.advanced.encryptionKeyLocation=Encryption Key Location
-setting.advanced.encryptionKeySize=Encryption Key Size
-setting.advanced.logDatabaseClearAfterDays=Number of days to maintain logs in Database
-setting.advanced.logExceptionsToDatabaseFlag=Log Unexpected Errors to Database
-setting.advanced.logMessages=Slatwall Application Logging
-setting.advanced.showRemoteIDFields=View RemoteID Fields in Administrator
-setting.advanced.timeFormat=Time Format
-setting.advanced.useProductCacheFlag=User Product Cache
-setting.advanced.useSkuCacheFlag=Use Sku Cache
-setting.inherit=Inherit
-setting.order=Order
-setting.order.orderNumberGeneration=Order Number Generation
-setting.order.orderPlacedEmailBCC=New Order Placed Email BCC
-setting.order.orderPlacedEmailCC=New Order Placed Email CC
-setting.order.orderPlacedEmailFrom=New Order Placed Email From
-setting.order.orderPlacedEmailSubject=New Order Placed Email Subject
-setting.paymentMethod.creditCard.storeCreditCardWithAccount=Allow customers to save credit card numbers for future orders
-setting.paymentMethod.creditCard.storeCreditCardWithOrderPayment=Store credit card numbers with orders
-setting.product=Product
-setting.product.activeFlag_hint=Indicate if the product is active and will be displayed.
-setting.product.allowBackorderFlag=Backorder OK
-setting.product.allowBackorderFlag_hint=Indicate whether this product can be backordered
-setting.product.allowDropshipFlag=Dropship OK
-setting.product.allowDropshipFlag_hint=Indicate whether this product can be dropshipped
-setting.product.allowPreorderFlag=Preorder OK
-setting.product.allowPreorderFlag_hint=Indicate whether this product can be preordered
-setting.product.allowShippingFlag=Shipping OK
-setting.product.allowShippingFlag_hint=Indicate whether this product is deliverable via shipping
-setting.product.callToOrderFlag=Phone Order Only
-setting.product.callToOrderFlag_hint=Indicate whether customers will be able to order this product by phone.
-setting.product.defaultProductTemplate=Default Product Template
-setting.product.imageHeightLarge=Large Image Height
-setting.product.imageHeightMedium=Medium Image Height
-setting.product.imageHeightSmall=Small Image Height
-setting.product.imageWidthLarge=Large Image Width
-setting.product.imageWidthMedium=Medium Image Width
-setting.product.imageWidthSmall=Small Image Width
-setting.product.imageextension=Image Extension
-setting.product.missingimagepath=Missing Image Path
-setting.product.productDisplayTemplate=Product Display Template
-setting.product.productDisplayTemplate_hint=The mura page that you would like to use as the template for displaying product on the front-end
-setting.product.quantityHeldBack=Hold Back Quantity
-setting.product.quantityHeldBack_hint=Quantity To Hold Back From ATS (Available To Sell) Calculations
-setting.product.quantityMaximum=Max Quantity
-setting.product.quantityMaximum_hint=Maximum inventory level for a SKU per location (Min / Max Ordering)
-setting.product.quantityMinimum=Min Quantity
-setting.product.quantityMinimum_hint=Minimum inventory level for a SKU per location before reorder is flagged (Min / Max Ordering)
-setting.product.quantityOrderMaximum=Max Order Quantity
-setting.product.quantityOrderMaximum_hint=Maximum per SKU quantity allowed on order
-setting.product.quantityOrderMinimum=Min Order Quantity
-setting.product.quantityOrderMinimum_hint=Minimum per SKU quantity allowed on order
-setting.product.rootProductCategory=Root Product Category
-setting.product.shippingWeight=Shipping Weight
-setting.product.shippingWeightUnitCode=Shipping Weight Unit of Measurement
-setting.product.shippingWeight_hint=Shipping weight of a single quantity of a SKU
-setting.product.titleString=Product Title Format
-setting.product.trackInventoryFlag=Track Inventory
-setting.product.trackInventoryFlag_hint=Select this if you would like the system to track inventory at this level.
-setting.product.urlKey=URL Key
-setting.settings=Settings
-setting.value=Value
+setting.globalCurrencyLocale=Currency Locale
+setting.globalCurrencyType=Currency Type
+setting.globalDateFormat=Date Format
+setting.globalEncryptionKeyLocation=Encryption Key Location
+setting.globalEncryptionKeySize=Encryption Key Size
+setting.globalImageExtension=Image Extension
+setting.globalLogMessages=Slatwall Application Logging
+setting.globalMissingImagePath=Missing Image Path
+setting.globalOrderNumberGeneration=Order Number Generation
+setting.globalOrderPlacedEmailBCC=New Order Placed Email BCC
+setting.globalOrderPlacedEmailCC=New Order Placed Email CC
+setting.globalOrderPlacedEmailFrom=New Order Placed Email From
+setting.globalOrderPlacedEmailSubjectString=New Order Placed Email Subject
+setting.globalRemoteIDEditFlag=Edit RemoteID Fields in Administration
+setting.globalRemoteIDShowFlag=View RemoteID Fields in Administrator
+setting.globalTimeFormat=Time Format
+setting.globalURLKeyProduct=URL Key
+setting.globalUseProductCacheFlag=User Product Cache
+setting.productDisplayTemplate=Default Product Template
+setting.productDisplayTemplate_hint=The mura page that you would like to use as the template for displaying product on the front-end
+setting.productImageLargeHeight=Large Image Height
+setting.productImageLargeWidth=Large Image Width
+setting.productImageMediumHeight=Medium Image Height
+setting.productImageMediumWidth=Medium Image Width
+setting.productImageSmallHeight=Small Image Height
+setting.productImageSmallWidth=Small Image Width
+setting.productTitleString=Product Title Format
+setting.skuAllowBackorderFlag=Backorder OK
+setting.skuAllowBackorderFlag_hint=Indicate whether this product can be backordered
+setting.skuAllowPreorderFlag=Preorder OK
+setting.skuAllowPreorderFlag_hint=Indicate whether this product can be preordered
+setting.skuHoldBackQuantity=Hold Back Quantity
+setting.skuHoldBackQuantity_hint=Quantity To Hold Back From ATS (Available To Sell) Calculations
+setting.skuOrderMaximumQuantity=Min Order Quantity
+setting.skuOrderMaximumQuantity_hint=Minimum per SKU quantity allowed on order
+setting.skuOrderMinimumQuantity=Max Order Quantity
+setting.skuOrderMinimumQuantity_hint=Maximum per SKU quantity allowed on order
+setting.skuShippingWeight=Shipping Weight
+setting.skuShippingWeightUnitCode=Shipping Weight Unit of Measurement
+setting.skuShippingWeight_hint=Shipping weight of a single quantity of a SKU
+setting.skuTrackInventoryFlag=Track Inventory
+setting.skuTrackInventoryFlag_hint=Select this if you would like the system to track inventory at this level.
 validator.array={objectValue} is an invalid array.
 validator.assertfalse=assertion failed
 validator.asserttrue=assertion failed
