More work on different aspects of the settings section.

--- a/resourceBundles/en.properties
+++ b/resourceBundles/en.properties
@@ -241,6 +241,7 @@ define.false=False
 define.general=General
 define.global=Global
 define.international=International
+define.length=Length
 define.local=Local
 define.modifiedByAccount=Modified By
 define.modifiedDateTime=Modified on
@@ -259,6 +260,7 @@ define.show=Show
 define.system=System
 define.true=True
 define.username=Username
+define.weight=Weight
 define.yes=Yes
 entity.Address.norecords=No Addresses Defined
 entity.Order.fulfillmentTotal=Delivery Charges
@@ -477,6 +479,11 @@ entity.location.locationName=Location Name
 entity.location.sellStockOnWeb=Sell Stock On Web
 entity.location.sellStockOnWebWholesale=Sell Stock On Web Wholesale
 entity.location_plural=Locations
+entity.measurementunit=Measurement Unit
+entity.measurementunit.measurementType=Measurement Type
+entity.measurementunit.unitCode=Unit Code
+entity.measurementunit.unitName=Unit Name
+entity.measurementunit_plural=Measurement Units
 entity.option=Option
 entity.option.optionCode=Option Code
 entity.option.optionDescription=Option Description
@@ -548,6 +555,10 @@ entity.orderitem.quantity=Quantity Ordered
 entity.orderitem.status=Status
 entity.orderitem.stock=stock
 entity.orderitem.taxAmount=taxAmount
+entity.orderorigin=Order Origin
+entity.orderorigin.orderoriginname=Order Origin Name
+entity.orderorigin.orderorigintype=Order Origin Type
+entity.orderorigin_plural=Order Origins
 entity.orderpayment.amount=Amount
 entity.orderpayment.amountrefunded=Amount Refunded
 entity.orderpayment.order=Order
@@ -1076,9 +1087,11 @@ setting.advanced.showRemoteIDFields=View RemoteID Fields in Administrator
 setting.advanced.timeFormat=Time Format
 setting.advanced.useProductCacheFlag=User Product Cache
 setting.advanced.useSkuCacheFlag=Use Sku Cache
+setting.brandDisplayTemplate=Brand Display Template
 setting.globalCurrencyLocale=Currency Locale
 setting.globalCurrencyType=Currency Type
 setting.globalDateFormat=Date Format
+setting.globalEncryptionKeyGenerator=Encryption Key Generator
 setting.globalEncryptionKeyLocation=Encryption Key Location
 setting.globalEncryptionKeySize=Encryption Key Size
 setting.globalImageExtension=Image Extension
@@ -1092,8 +1105,11 @@ setting.globalOrderPlacedEmailSubjectString=New Order Placed Email Subject
 setting.globalRemoteIDEditFlag=Edit RemoteID Fields in Administration
 setting.globalRemoteIDShowFlag=View RemoteID Fields in Administrator
 setting.globalTimeFormat=Time Format
+setting.globalURLKeyBrand=Brand URL Key
 setting.globalURLKeyProduct=URL Key
+setting.globalURLKeyProductType=Product Type URL Key
 setting.globalUseProductCacheFlag=User Product Cache
+setting.globalWeightUnitCode=Weight Measurement Unit
 setting.inherit=Inherit
 setting.order=Order
 setting.order.orderNumberGeneration=Order Number Generation
@@ -1153,11 +1169,14 @@ setting.productImageMediumWidth=Medium Image Width
 setting.productImageSmallHeight=Small Image Height
 setting.productImageSmallWidth=Small Image Width
 setting.productTitleString=Product Title Format
+setting.productTypeDisplayTemplate=Product Type Display Template
 setting.settings=Settings
 setting.skuAllowBackorderFlag=Backorder OK
 setting.skuAllowBackorderFlag_hint=Indicate whether this product can be backordered
 setting.skuAllowPreorderFlag=Preorder OK
 setting.skuAllowPreorderFlag_hint=Indicate whether this product can be preordered
+setting.skuEligableOrderOrigins=Sku Eligable Order Origins
+setting.skuEligablePaymentMethods=Sku Eligable Payment Methods
 setting.skuHoldBackQuantity=Hold Back Quantity
 setting.skuHoldBackQuantity_hint=Quantity To Hold Back From ATS (Available To Sell) Calculations
 setting.skuOrderMaximumQuantity=Min Order Quantity
