Updates to encryption settings, and commiting some previous views.

--- a/resourceBundles/en.properties
+++ b/resourceBundles/en.properties
@@ -1091,9 +1091,12 @@ setting.brandDisplayTemplate=Brand Display Template
 setting.globalCurrencyLocale=Currency Locale
 setting.globalCurrencyType=Currency Type
 setting.globalDateFormat=Date Format
+setting.globalEncryptionAlgorithm=Encryption Algorithm
+setting.globalEncryptionEncoding=Encryption Encoding
 setting.globalEncryptionKeyGenerator=Encryption Key Generator
 setting.globalEncryptionKeyLocation=Encryption Key Location
 setting.globalEncryptionKeySize=Encryption Key Size
+setting.globalEncryptionService=Encryption Service
 setting.globalImageExtension=Image Extension
 setting.globalLogMessages=Slatwall Application Logging
 setting.globalMissingImagePath=Missing Image Path
@@ -1160,7 +1163,7 @@ setting.product.titleString=Product Title Format
 setting.product.trackInventoryFlag=Track Inventory
 setting.product.trackInventoryFlag_hint=Select this if you would like the system to track inventory at this level.
 setting.product.urlKey=URL Key
-setting.productDisplayTemplate=Default Product Template
+setting.productDisplayTemplate=Product Template
 setting.productDisplayTemplate_hint=The mura page that you would like to use as the template for displaying product on the front-end
 setting.productImageLargeHeight=Large Image Height
 setting.productImageLargeWidth=Large Image Width
@@ -1179,10 +1182,10 @@ setting.skuEligableOrderOrigins=Sku Eligable Order Origins
 setting.skuEligablePaymentMethods=Sku Eligable Payment Methods
 setting.skuHoldBackQuantity=Hold Back Quantity
 setting.skuHoldBackQuantity_hint=Quantity To Hold Back From ATS (Available To Sell) Calculations
-setting.skuOrderMaximumQuantity=Min Order Quantity
-setting.skuOrderMaximumQuantity_hint=Minimum per SKU quantity allowed on order
-setting.skuOrderMinimumQuantity=Max Order Quantity
-setting.skuOrderMinimumQuantity_hint=Maximum per SKU quantity allowed on order
+setting.skuOrderMaximumQuantity=Max Order Quantity
+setting.skuOrderMaximumQuantity_hint=Maximum per SKU quantity allowed on order
+setting.skuOrderMinimumQuantity=Min Order Quantity
+setting.skuOrderMinimumQuantity_hint=Minimum per SKU quantity allowed on order
 setting.skuShippingWeight=Shipping Weight
 setting.skuShippingWeightUnitCode=Shipping Weight Unit of Measurement
 setting.skuShippingWeight_hint=Shipping weight of a single quantity of a SKU
