Working on Sku Detail page.

--- a/resourceBundles/en.properties
+++ b/resourceBundles/en.properties
@@ -923,6 +923,7 @@ entity.sku.webQOH=webQOH
 entity.sku.webWholesaleQC=webWholesaleQC
 entity.sku.webWholesaleQEXP=webWholesaleQEXP
 entity.sku.webWholesaleQOH=webWholesaleQOH
+entity.sku_plural=Skus
 entity.skualternate.sku=sku
 entity.skualternate.skuAlternateID=skuAlternateID
 entity.skualternate.skuType=skuType
