More work on Setting setup

--- a/resourceBundles/en.properties
+++ b/resourceBundles/en.properties
@@ -85,12 +85,17 @@ admin.product.producttabs.productcategories=Product Categories
 admin.product.producttabs.productdescription=Product Description
 admin.product.producttabs.productpages=Product Pages
 admin.product.producttabs.productreviews=Product Reviews
+admin.product.producttabs.productsettings=Product Settings
 admin.product.producttabs.relatedproducts=Related Products
-admin.product.producttabs.settings=Settings
 admin.product.producttabs.skus=Skus
+admin.product.producttabs.skusettings=Sku Settings
 admin.product.producttypetabs.attributesets=Attribute Sets
 admin.product.producttypetabs.products=Products
-admin.product.producttypetabs.settings=Settings
+admin.product.producttypetabs.productsettings=Product Settings
+admin.product.producttypetabs.producttypedescription=Product Type Description
+admin.product.producttypetabs.producttypesettings=Product Type Settings
+admin.product.producttypetabs.skusettings=Sku Settings
+admin.product.skutabs.skusettings=Sku Settings
 admin.product_nav=Products
 admin.producttype.settingdefinedin=Setting Defined In
 admin.report=Reporting Services
@@ -109,13 +114,16 @@ admin.setting.deleteaddresszonelocation_success=The location has successfully be
 admin.setting.fulfillmentmethodtypes.pickuptabs.settings=Settings
 admin.setting.fulfillmentmethodtypes.shippingtabs.settings=Settings
 admin.setting.fulfillmentmethodtypes.shippingtabs.shippingmethods=Shipping Methods
+admin.setting.listsettingtabs.brand=Brand Settings
+admin.setting.listsettingtabs.global=Global Settings
+admin.setting.listsettingtabs.globaladvanced=Global Advanced Settings
+admin.setting.listsettingtabs.product=Product Settings
+admin.setting.listsettingtabs.producttype=Product Type Settings
+admin.setting.listsettingtabs.sku=Sku Settings
 admin.setting.paymentmethodtypes.cashtabs.settings=Cash Settings
 admin.setting.paymentmethodtypes.creditcardtabs.settings=Credit Card Settings
 admin.setting.paymentmethodtypes.giftcardtabs.settings=Gift Card Settings
 admin.setting.settingtabs.advanced=Advanced Settings
-admin.setting.settingtabs.general=General Settings
-admin.setting.settingtabs.order=Order Settings
-admin.setting.settingtabs.product=Product Settings
 admin.setting.taxcategorytabs.rates=Tax Rates
 admin.setting.updateProductCache_success=Product Cache Update Started
 admin.setting.updateSkuCache=Update Sku Cache
@@ -240,6 +248,9 @@ define.exportlist=Export List
 define.false=False
 define.general=General
 define.global=Global
+define.here=Here
+define.inheritance=Inheritance
+define.inherited=Inherited
 define.international=International
 define.length=Length
 define.local=Local
