Wrapping up setting overrides.

--- a/resourceBundles/en.properties
+++ b/resourceBundles/en.properties
@@ -111,6 +111,7 @@ admin.setting.createaddresszonelocation=Add Location to Zone
 admin.setting.createaddresszonelocation_nav=Add Location to Zone
 admin.setting.default=Setting Dashboard
 admin.setting.deleteaddresszonelocation_success=The location has successfully been removed from this Address Zone.
+admin.setting.deletesetting_nav=Remove Setting Override
 admin.setting.fulfillmentmethodtypes.pickuptabs.settings=Settings
 admin.setting.fulfillmentmethodtypes.shippingtabs.settings=Settings
 admin.setting.fulfillmentmethodtypes.shippingtabs.shippingmethods=Shipping Methods
