Wrapping up setting overrides.

--- a/resourceBundles/en.properties
+++ b/resourceBundles/en.properties
@@ -1191,14 +1191,18 @@ setting.skuAllowBackorderFlag=Backorder OK
 setting.skuAllowBackorderFlag_hint=Indicate whether this product can be backordered
 setting.skuAllowPreorderFlag=Preorder OK
 setting.skuAllowPreorderFlag_hint=Indicate whether this product can be preordered
-setting.skuEligableOrderOrigins=Sku Eligable Order Origins
-setting.skuEligablePaymentMethods=Sku Eligable Payment Methods
+setting.skuEligableFulfillmentMethods=Eligable Fulfillment Methods
+setting.skuEligableOrderOrigins=Eligable Order Origins
+setting.skuEligablePaymentMethods=Eligable Payment Methods
 setting.skuHoldBackQuantity=Hold Back Quantity
 setting.skuHoldBackQuantity_hint=Quantity To Hold Back From ATS (Available To Sell) Calculations
 setting.skuOrderMaximumQuantity=Max Order Quantity
 setting.skuOrderMaximumQuantity_hint=Maximum per SKU quantity allowed on order
 setting.skuOrderMinimumQuantity=Min Order Quantity
 setting.skuOrderMinimumQuantity_hint=Minimum per SKU quantity allowed on order
+setting.skuQATSIncludesQNROROFlag=QATS Includes QNRORO
+setting.skuQATSIncludesQNROSAFlag=QATS Includes QNROSA
+setting.skuQATSIncludesQNROVOFlag=QATS Includes QNROVO
 setting.skuShippingWeight=Shipping Weight
 setting.skuShippingWeightUnitCode=Shipping Weight Unit of Measurement
 setting.skuShippingWeight_hint=Shipping weight of a single quantity of a SKU
