Misc Updates to spanClass

--- a/resourceBundles/en.properties
+++ b/resourceBundles/en.properties
@@ -678,7 +678,7 @@ entity.product.productCode=Product Code
 entity.product.productCode_validateUnique=The product code is already in use for another product.
 entity.product.productDescription=Product Description
 entity.product.productDisplayTemplate=Product Display Template
-entity.product.productID=productID
+entity.product.productID=Product ID
 entity.product.productName=Product Name
 entity.product.productReviews=Product Reviews
 entity.product.productType=Product Type
