--- a/resourceBundles/en.properties
+++ b/resourceBundles/en.properties
@@ -294,6 +294,7 @@ entity.PromotionRewardShipping.shippingDiscountType=Shipping Discount Type
 entity.PromotionRewardShipping.shippingMethods=Shipping Methods
 entity.PromotionRewardShipping.shippingPercentageOff=Shipping Rate % Off
 entity.RoundingRule.roundingRuleDirection=Rounding Direction
+entity.Sku.optionsDisplay=Options
 entity.StockAdjustment.stockAdjustmentType=Type
 entity.Vendor.brands=Brands Offered
 entity.Vendor.emailAddress=Email Address
