Working on product image upload.

--- a/resourceBundles/en.properties
+++ b/resourceBundles/en.properties
@@ -76,6 +76,8 @@ admin.product.createmerchandiseproduct_nav=New Merchandise Product
 admin.product.createmerchandiseproducttype_nav=New Merchandise Product Type
 admin.product.createproduct.selectsubscriptionbenifits=Select the Subscription Benefit(s) that you would like to sell as this product.
 admin.product.createproduct.selectsubscriptionterms=Select the different Subscription Term(s) that you would like to offer for this product.
+admin.product.createproductimage=Upload New Product Image
+admin.product.createproductimage_nav=Add Product Image
 admin.product.createsubscriptionproduct_nav=New Subscription Product
 admin.product.createsubscriptionproducttype_nav=New Subscription Product Type
 admin.product.optiongrouptabs.options=Options
