Updated the brand detail page to reflect new settings.

--- a/resourceBundles/en.properties
+++ b/resourceBundles/en.properties
@@ -68,6 +68,7 @@ admin.pricing.promotiontabs.promotiondescription=Description
 admin.pricing.promotiontabs.promotionperiods=Promotion Periods
 admin.pricing_nav=Pricing
 admin.product=Product Manager
+admin.product.brandtabs.brandsettings=Brand Settings
 admin.product.brandtabs.products=Products
 admin.product.brandtabs.vendors=Vendors
 admin.product.createcontentaccessproduct_nav=New Content Access Product
