added content view

--- a/resourceBundles/en.properties
+++ b/resourceBundles/en.properties
@@ -449,8 +449,12 @@ entity.category.restrictAccessFlag=Restrict Access
 entity.category_plural=Categories
 entity.comment.comment=Comment
 entity.content=Content
+entity.content_plural=Contents
 entity.content.allowPurchaseFlag=Would you like to sell this content?
 entity.content.contentID=Content ID
+entity.content.cmsContentID=CMS Content ID
+entity.content.cmsContentIDPath=CMS Content ID Path
+entity.content.cmsSiteID=CMS Site ID
 entity.content.defaultProductsPerPage=Default number of products per page
 entity.content.disableProductAssignmentFlag=Disable product assignment
 entity.content.productListingFlag=Use as a product listing page
